finish model development

--- a/3. model development.ipynb
+++ b/3. model development.ipynb
@@ -3248,16 +3248,36 @@
    "execution_count": null
   },
   {
-   "cell_type": "code",
-   "source": "",
+   "cell_type": "markdown",
+   "source": "<p>Now that we have visualized the different models, and generated the R-squared and MSE values for the fits, how do we determine a good model fit?\r\n<ul>\r\n    <li><i>What is a good R-squared value?</i></li>\r\n</ul>\r\n</p>\r\n\r\n<p>When comparing models, <b>the model with the higher R-squared value is a better fit</b> for the data.\r\n<ul>\r\n    <li><i>What is a good MSE?</i></li>\r\n</ul>\r\n</p>\r\n\r\n<p>When comparing models, <b>the model with the smallest MSE value is a better fit</b> for the data.</p>\r\n\r\n<h4>Let's take a look at the values for the different models.</h4>\r\n<p>Simple Linear Regression: Using Highway-mpg as a Predictor Variable of Price.\r\n<ul>\r\n    <li>R-squared: 0.49659118843391759</li>\r\n    <li>MSE: 3.16 x10^7</li>\r\n</ul>\r\n</p>\r\n\r\n<p>Multiple Linear Regression: Using Horsepower, Curb-weight, Engine-size, and Highway-mpg as Predictor Variables of Price.\r\n<ul>\r\n    <li>R-squared: 0.80896354913783497</li>\r\n    <li>MSE: 1.2 x10^7</li>\r\n</ul>\r\n</p>\r\n\r\n<p>Polynomial Fit: Using Highway-mpg as a Predictor Variable of Price.\r\n<ul>\r\n    <li>R-squared: 0.6741946663906514</li>\r\n    <li>MSE: 2.05 x 10^7</li>\r\n</ul>\r\n</p>\r\n",
    "metadata": {
     "cell_id": "3bc6897d-ae8a-4770-b6f9-b56e69d20375",
     "tags": [],
-    "deepnote_cell_type": "code",
-    "deepnote_cell_height": 66
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 551
    },
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": "# Conclusion",
+   "metadata": {
+    "cell_id": "53c0e5cd-4ed4-4001-9bb0-847adca1dcb2",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 82
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": "<p>Comparing these three models, we conclude that <b>the MLR model is the best model</b> to be able to predict price from our dataset. This result makes sense that more than one of those variables are potential predictors of the final car price.</p>\r\n",
+   "metadata": {
+    "cell_id": "fd7955c1-b1cb-41ea-be91-5338a7cca18b",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 74.796875
+   }
   },
   {
    "cell_type": "markdown",
