resolve some problems

--- a/1. cleaning data.ipynb
+++ b/1. cleaning data.ipynb
@@ -19,7 +19,11 @@
     "source_hash": "9cf760dc",
     "execution_start": 1645738114470,
     "execution_millis": 2628,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 226.1875,
+    "deepnote_output_heights": [
+     21.1875
+    ]
    },
    "source": "import pandas as pd\nimport numpy as np\nimport matplotlib.pyplot as plt\n%matplotlib inline\nimport seaborn as sns\nfrom scipy import stats\npd.__version__",
    "execution_count": null,
@@ -43,7 +47,8 @@
     "source_hash": "4603e43",
     "execution_start": 1645738117108,
     "execution_millis": 3,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 81
    },
    "source": "pd.options.display.float_format = '{:,.3f}'.format",
    "execution_count": null,
@@ -58,7 +63,8 @@
     "source_hash": "83db5782",
     "execution_start": 1645738117121,
     "execution_millis": 2,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 81
    },
    "source": "np.set_printoptions(precision=3)",
    "execution_count": null,
@@ -83,7 +89,8 @@
     "source_hash": "f0867366",
     "execution_start": 1645738117173,
     "execution_millis": 372030,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 81
    },
    "source": "path_file = 'auto.csv'",
    "execution_count": null,
@@ -98,7 +105,8 @@
     "source_hash": "4d56e830",
     "execution_start": 1645738117174,
     "execution_millis": 370027,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 135
    },
    "source": "headers = [\"symboling\",\"normalized-losses\",\"make\",\"fuel-type\",\"aspiration\", \"num-of-doors\",\"body-style\",\n         \"drive-wheels\",\"engine-location\",\"wheel-base\", \"length\",\"width\",\"height\",\"curb-weight\",\"engine-type\",\n         \"num-of-cylinders\", \"engine-size\",\"fuel-system\",\"bore\",\"stroke\",\"compression-ratio\",\"horsepower\",\n         \"peak-rpm\",\"city-mpg\",\"highway-mpg\",\"price\"]",
    "execution_count": null,
@@ -113,7 +121,8 @@
     "source_hash": "73aed4a0",
     "execution_start": 1645738117175,
     "execution_millis": 188,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 629.59375
    },
    "source": "df_auto = pd.read_csv(path_file, names=headers)\ndf_auto",
    "execution_count": null,
@@ -1400,7 +1409,8 @@
     "source_hash": "3a93b0ce",
     "execution_start": 1645738117428,
     "execution_millis": 3,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 118.1875
    },
    "source": "df_auto.shape",
    "execution_count": null,
@@ -1424,7 +1434,8 @@
     "source_hash": "be22fbc7",
     "execution_start": 1645738117473,
     "execution_millis": 358086,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 617.375
    },
    "source": "df_auto.dtypes",
    "execution_count": null,
@@ -1448,7 +1459,8 @@
     "source_hash": "f7d931eb",
     "execution_start": 1645738117473,
     "execution_millis": 207,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 611.59375
    },
    "source": "df_auto.describe(include = 'all')",
    "execution_count": null,
@@ -2757,7 +2769,8 @@
     "source_hash": "5eb7d7b8",
     "execution_start": 1645738117710,
     "execution_millis": 89,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 629.59375
    },
    "source": "df_auto.replace([' ','', '?'], np.nan, inplace = True)\ndf_auto",
    "execution_count": null,
@@ -4054,7 +4067,8 @@
     "source_hash": "75e8b26e",
     "execution_start": 1645738117850,
     "execution_millis": 34,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 424.59375
    },
    "source": "df_auto_null = df_auto.isnull()\ndf_auto_null.head()",
    "execution_count": null,
@@ -4611,7 +4625,8 @@
      "sortBy": []
     },
     "deepnote_table_loading": false,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 511
    },
    "source": "columnas_con_nulos = df_auto_null.T.sum(axis = 1).to_frame(name = 'valores_nulos')\ncolumnas_con_nulos = columnas_con_nulos[columnas_con_nulos['valores_nulos'] != 0]\ncolumnas_con_nulos",
    "execution_count": null,
@@ -4738,7 +4753,8 @@
     "source_hash": "672c41bd",
     "execution_start": 1645738117958,
     "execution_millis": 3,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 324.59375
    },
    "source": "df_auto[columnas_con_nulos.index].sample(3)",
    "execution_count": null,
@@ -4936,7 +4952,8 @@
    "metadata": {
     "cell_id": "d7eba59b-8477-4450-bb00-502a58d36898",
     "tags": [],
-    "deepnote_cell_type": "markdown"
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 381.1875
    }
   },
   {
@@ -4968,7 +4985,8 @@
     "source_hash": "76a4b562",
     "execution_start": 1645738118003,
     "execution_millis": 0,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 315
    },
    "source": "normalized_losses_mean = df_auto['normalized-losses'].astype(float).mean(axis = 0)\ndf_auto['normalized-losses'].replace(np.nan, normalized_losses_mean, inplace = True)\n\nbore_mean = df_auto['bore'].astype(float).mean(axis = 0)\ndf_auto['bore'].replace(np.nan, bore_mean, inplace = True)\n\nstroke_mean = df_auto['stroke'].astype(float).mean(axis = 0)\ndf_auto['stroke'].replace(np.nan, stroke_mean, inplace = True)\n\nhorsepower_mean = df_auto['horsepower'].astype(float).mean(axis = 0)\ndf_auto['horsepower'].replace(np.nan, horsepower_mean, inplace = True)\n\npeak_rpm_mean = df_auto['peak-rpm'].astype(float).mean(axis = 0)\ndf_auto['peak-rpm'].replace(np.nan, peak_rpm_mean, inplace = True)",
    "execution_count": null,
@@ -4993,7 +5011,11 @@
     "source_hash": "bb955fe5",
     "execution_start": 1645738118004,
     "execution_millis": 0,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 174.578125,
+    "deepnote_output_heights": [
+     59.59375
+    ]
    },
    "source": "# reemplazamos por el que más se repite con el que tiene mayor frecuencia\ndf_auto['num-of-doors'].value_counts()",
    "execution_count": null,
@@ -5017,7 +5039,11 @@
     "source_hash": "4f99ec08",
     "execution_start": 1645738118004,
     "execution_millis": 4,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 118.1875,
+    "deepnote_output_heights": [
+     21.1875
+    ]
    },
    "source": "df_auto['num-of-doors'].value_counts().idxmax()",
    "execution_count": null,
@@ -5041,7 +5067,8 @@
     "source_hash": "2288e60e",
     "execution_start": 1645738118007,
     "execution_millis": 3,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 81
    },
    "source": "df_auto['num-of-doors'].replace(np.nan, 'four', inplace = True)",
    "execution_count": null,
@@ -5066,7 +5093,8 @@
     "source_hash": "bf9a2bb6",
     "execution_start": 1645738118055,
     "execution_millis": 1,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 81
    },
    "source": "df_auto.dropna(subset = ['price'], axis = 0, inplace = True)",
    "execution_count": null,
@@ -5081,7 +5109,8 @@
     "source_hash": "9a2f7b9d",
     "execution_start": 1645738118057,
     "execution_millis": 0,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 81
    },
    "source": "df_auto.reset_index(drop = True, inplace = True)",
    "execution_count": null,
@@ -5113,7 +5142,11 @@
      "sortBy": []
     },
     "deepnote_table_loading": false,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 172.1875,
+    "deepnote_output_heights": [
+     21.1875
+    ]
    },
    "source": "df_null = df_auto.isnull()\ncol_nul = df_null.T.sum(axis = 1).to_frame(name = 'valores_nulos')\ncol_nul = col_nul[col_nul['valores_nulos']!=0]\ncol_nul.shape[0]",
    "execution_count": null,
@@ -5147,7 +5180,11 @@
     "source_hash": "be22fbc7",
     "execution_start": 1645738118060,
     "execution_millis": 12,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 617.375,
+    "deepnote_output_heights": [
+     520.390625
+    ]
    },
    "source": "df_auto.dtypes",
    "execution_count": null,
@@ -5171,7 +5208,11 @@
     "source_hash": "86f7ebb8",
     "execution_start": 1645738118081,
     "execution_millis": 11,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 193.78125,
+    "deepnote_output_heights": [
+     78.796875
+    ]
    },
    "source": "# para verificar unos ejemplos de cada campo\ndf_auto['price'].sample(3)",
    "execution_count": null,
@@ -5195,7 +5236,11 @@
     "source_hash": "465b4cdf",
     "execution_start": 1645738118137,
     "execution_millis": 3,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 289.78125,
+    "deepnote_output_heights": [
+     174.796875
+    ]
    },
    "source": "# para verificar que las variables categóricas cumplen o no el cambio\ndf_auto['fuel-system'].value_counts()",
    "execution_count": null,
@@ -5216,7 +5261,8 @@
    "metadata": {
     "cell_id": "ac9875bc-225a-45ad-a484-3606e9ca98f8",
     "tags": [],
-    "deepnote_cell_type": "markdown"
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 490.390625
    }
   },
   {
@@ -5228,7 +5274,8 @@
     "source_hash": "2f24b0cc",
     "execution_start": 1645738118138,
     "execution_millis": 0,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 117
    },
    "source": "df_auto[['normalized-losses', 'horsepower']] = df_auto[['normalized-losses', 'horsepower']].astype(int)\ndf_auto[['bore', 'stroke', 'peak-rpm', 'price']] = df_auto[['bore', 'stroke', 'peak-rpm', 'price']].astype(float)\ndf_auto[['fuel-type', 'aspiration', 'num-of-doors', 'body-style', 'drive-wheels', 'engine-location', 'engine-type', 'num-of-cylinders']] = df_auto[['fuel-type', 'aspiration', 'num-of-doors', 'body-style', 'drive-wheels', 'engine-location', 'engine-type', 'num-of-cylinders']].astype('category')",
    "execution_count": null,
@@ -5243,7 +5290,11 @@
     "source_hash": "d36b0077",
     "execution_start": 1645738118181,
     "execution_millis": 2,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 635.375,
+    "deepnote_output_heights": [
+     520.390625
+    ]
    },
    "source": "# verificamos si el cambio se realizó satisfactoriamente\ndf_auto.dtypes",
    "execution_count": null,
@@ -5277,7 +5328,8 @@
     "source_hash": "61103088",
     "execution_start": 1645738118183,
     "execution_millis": 102,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 324.59375
    },
    "source": "df_auto.sample(3)",
    "execution_count": null,
@@ -6574,7 +6626,8 @@
    "metadata": {
     "cell_id": "1bc1800c-8ad4-410e-b671-7debb1920b7f",
     "tags": [],
-    "deepnote_cell_type": "markdown"
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 260.796875
    }
   },
   {
@@ -6586,7 +6639,8 @@
     "source_hash": "3b7e5c27",
     "execution_start": 1645738118289,
     "execution_millis": 26,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 483
    },
    "source": "# cambiamos el formato\ndf_auto['city-mpg'] = 235 / df_auto['city-mpg']\ndf_auto['highway-mpg'] = 235 / df_auto['highway-mpg']\n# cambiamos el nombre de las columnas\ndf_auto.rename(columns = {'city-mpg': 'city-l/100km', 'highway-mpg': 'highway-l/100km'}, inplace = True)\ndf_auto[['city-l/100km', 'highway-l/100km']].head()",
    "execution_count": null,
@@ -6782,7 +6836,8 @@
     "source_hash": "763f511c",
     "execution_start": 1645738118346,
     "execution_millis": 107,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 406.59375
    },
    "source": "df_auto.head()",
    "execution_count": null,
@@ -8133,7 +8188,8 @@
    "metadata": {
     "cell_id": "6c78085e-c7be-4ce9-8593-3182837ba520",
     "tags": [],
-    "deepnote_cell_type": "markdown"
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 52.390625
    }
   },
   {
@@ -8145,7 +8201,8 @@
     "source_hash": "f78a9e9c",
     "execution_start": 1645738118457,
     "execution_millis": 3,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 117
    },
    "source": "df_auto['length'] = df_auto['length']/df_auto['length'].max()\ndf_auto['width'] = df_auto['width']/df_auto['width'].max()\ndf_auto['height'] = df_auto['height']/df_auto['height'].max()",
    "execution_count": null,
@@ -8160,7 +8217,8 @@
     "source_hash": "d721c8be",
     "execution_start": 1645738118470,
     "execution_millis": 33,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 393
    },
    "source": "df_auto[['length', 'width', 'height']].head()",
    "execution_count": null,
@@ -8423,7 +8481,8 @@
     "source_hash": "763f511c",
     "execution_start": 1645738118507,
     "execution_millis": 152,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 406.59375
    },
    "source": "df_auto.head()",
    "execution_count": null,
@@ -9777,7 +9836,11 @@
     "source_hash": "97295019",
     "execution_start": 1645738118661,
     "execution_millis": 8,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 136.1875,
+    "deepnote_output_heights": [
+     21.1875
+    ]
    },
    "source": "bins_array = np.linspace(df_auto['horsepower'].min(), df_auto['horsepower'].max(), 4)\nbins_array",
    "execution_count": null,
@@ -9801,7 +9864,11 @@
     "source_hash": "b685318",
     "execution_start": 1645738118666,
     "execution_millis": 21,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 136.1875,
+    "deepnote_output_heights": [
+     21.1875
+    ]
    },
    "source": "labels_name = ['Low', 'Medium', 'High']\nlabels_name",
    "execution_count": null,
@@ -9825,7 +9892,8 @@
     "source_hash": "1abc8c33",
     "execution_start": 1645738118671,
     "execution_millis": 482,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 424.59375
    },
    "source": "df_auto['horsepower_binned'] = pd.cut(df_auto['horsepower'], bins = bins_array, labels = labels_name, include_lowest=True)\ndf_auto.head()",
    "execution_count": null,
@@ -11199,7 +11267,8 @@
    "metadata": {
     "cell_id": "455aac53-bd4b-4279-9223-84eefa0f7467",
     "tags": [],
-    "deepnote_cell_type": "markdown"
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 70
    }
   },
   {
@@ -11211,7 +11280,11 @@
     "source_hash": "4bf52475",
     "execution_start": 1645738118799,
     "execution_millis": 354,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 156.578125,
+    "deepnote_output_heights": [
+     59.59375
+    ]
    },
    "source": "df_auto['fuel-type'].value_counts()",
    "execution_count": null,
@@ -11235,7 +11308,8 @@
     "source_hash": "d70c7312",
     "execution_start": 1645738118852,
     "execution_millis": 302,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 411
    },
    "source": "df_fuel_type_dummies = pd.get_dummies(df_auto['fuel-type'])\ndf_fuel_type_dummies.head()",
    "execution_count": null,
@@ -11421,7 +11495,8 @@
     "source_hash": "dea14ceb",
     "execution_start": 1645738118853,
     "execution_millis": 302,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 411
    },
    "source": "df_fuel_type_dummies.rename(columns = {'diesel': 'fuel_type_diesel', 'gas': 'fuel_type_gas'}, inplace = True)\ndf_fuel_type_dummies.head()",
    "execution_count": null,
@@ -11607,7 +11682,8 @@
     "source_hash": "3a93b0ce",
     "execution_start": 1645738309411,
     "execution_millis": 197,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 118.1875
    },
    "source": "df_auto.shape",
    "execution_count": null,
@@ -11631,7 +11707,8 @@
     "source_hash": "87098cec",
     "execution_start": 1645738318688,
     "execution_millis": 4,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 118.1875
    },
    "source": "df_fuel_type_dummies.shape",
    "execution_count": null,
@@ -11655,7 +11732,8 @@
     "source_hash": "bff5bcf3",
     "execution_start": 1645738619332,
     "execution_millis": 357,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 342.59375
    },
    "source": "df_auto = pd.concat([df_auto, df_fuel_type_dummies], axis = 1, ignore_index = True)\ndf_auto.sample(3)",
    "execution_count": null,
@@ -13090,7 +13168,8 @@
     "source_hash": "6944da2b",
     "execution_start": 1645738837256,
     "execution_millis": 2,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 135
    },
    "source": "headers = [\"symboling\",\"normalized-losses\",\"make\",\"fuel-type\",\"aspiration\", \"num-of-doors\",\"body-style\",\n         \"drive-wheels\",\"engine-location\",\"wheel-base\", \"length\",\"width\",\"height\",\"curb-weight\",\"engine-type\",\n         \"num-of-cylinders\", \"engine-size\",\"fuel-system\",\"bore\",\"stroke\",\"compression-ratio\",\"horsepower\",\n         \"peak-rpm\",\"city-l/100km\",\"highway-l/100km\",\"price\", 'horsepower_binned', 'fuel_type_diesel', 'fuel_type_gas']",
    "execution_count": null,
@@ -13105,7 +13184,8 @@
     "source_hash": "ee8bacfa",
     "execution_start": 1645738839262,
     "execution_millis": 3,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 81
    },
    "source": "df_auto.columns = headers",
    "execution_count": null,
@@ -13120,7 +13200,8 @@
     "source_hash": "2658c17e",
     "execution_start": 1645738848773,
     "execution_millis": 461,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 424.59375
    },
    "source": "df_auto.drop(columns = 'fuel-type', axis = 1, inplace = True)\ndf_auto.head()",
    "execution_count": null,
@@ -14609,7 +14690,8 @@
    "metadata": {
     "cell_id": "3d9be9ae-7b86-40f4-b969-473499275218",
     "tags": [],
-    "deepnote_cell_type": "markdown"
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 70
    }
   },
   {
@@ -14621,7 +14703,8 @@
     "source_hash": "c16a8bea",
     "execution_start": 1645739693789,
     "execution_millis": 17,
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 130
    },
    "source": "df_auto.to_csv('clean_data_car.csv', index = False)\nprint('file_saved')",
    "execution_count": null,
