--- a/4. Model Evaluation and Refinement.ipynb
+++ b/4. Model Evaluation and Refinement.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "source": "# Prepare the environment",
    "metadata": {
     "tags": [],
     "cell_id": "f7af36b6-b7aa-4598-b1af-2bc929d0fe3d",
     "deepnote_cell_type": "markdown",
     "deepnote_cell_height": 82
-   },
-   "source": "# Prepare the environment",
-   "execution_count": null
+   }
   },
   {
    "cell_type": "markdown",
@@ -23,21 +22,35 @@
     "execution_millis": 6,
     "deepnote_cell_type": "markdown",
     "deepnote_cell_height": 70
-   },
-   "outputs": [],
-   "execution_count": 1
+   }
   },
   {
    "cell_type": "code",
-   "source": "import pandas as pd\r\nimport numpy as np",
    "metadata": {
     "cell_id": "47d70a3f-133e-4fa5-a924-3dc60484e416",
     "tags": [],
+    "deepnote_to_be_reexecuted": false,
+    "source_hash": "f302453b",
+    "execution_start": 1647956049204,
+    "execution_millis": 4137,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 84
+    "deepnote_cell_height": 226.1875,
+    "deepnote_output_heights": [
+     21.1875
+    ]
    },
-   "outputs": [],
-   "execution_count": null
+   "source": "import pandas as pd\nimport numpy as np\nimport seaborn as sns\nimport matplotlib.pyplot as plt\nfrom scipy import stats\n%matplotlib inline\npd.__version__",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "execution_count": 2,
+     "data": {
+      "text/plain": "'1.3.5'"
+     },
+     "metadata": {}
+    }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -51,18 +64,28 @@
     "execution_millis": 3,
     "deepnote_cell_type": "markdown",
     "deepnote_cell_height": 70
-   },
-   "outputs": [],
-   "execution_count": 2
+   }
   },
   {
    "cell_type": "code",
-   "source": "# we are going to continue with the project... don't worry, be patience",
    "metadata": {
     "cell_id": "378f256d-17fc-4d7d-957c-349b615bd9eb",
     "tags": [],
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 66
+   },
+   "source": "",
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "source": "# read our data frame\ndf_cars = pd.read_csv()",
+   "metadata": {
+    "cell_id": "d04f10528e73423d9e055a57699706c2",
+    "tags": [],
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 84
    },
    "outputs": [],
    "execution_count": null
